erDiagram
    User ||--o{ Emergency : "crea"
    User }o--o{ Allergy : "tiene"
    User }o--o{ ChronicDisease : "tiene"
    User }o--o{ PreviousSurgery : "tiene"
    User }o--o{ Disability : "tiene"
    Emergency ||--o| Emergency : "emergency_main"
    Emergency }o--o{ Department : "comunica_con"
    Department ||--o{ CommunicateEmergencyDepartment : "tiene"
    Emergency ||--o{ CommunicateEmergencyDepartment : "tiene"

    User {
        uuid id PK
        string email UK
        string username
        string google_id UK
        boolean is_oauth_user
        bigint identificator
        string address
        string blood_type
        string sex
        int height
        int weight
        int age
        text allergies_other
        text chronic_diseases_other
        text previous_surgeries_other
        text disabilities_other
        json close_contacts
        bigint phone_number
        int strikes
        boolean blocked
        datetime updated_at
    }

    Allergy {
        int id PK
        string name UK
        boolean is_active
        datetime created_at
    }

    ChronicDisease {
        int id PK
        string name UK
        boolean is_active
        datetime created_at
    }

    PreviousSurgery {
        int id PK
        string name UK
        boolean is_active
        datetime created_at
    }

    Disability {
        int id PK
        string name UK
        boolean is_active
        datetime created_at
    }

    Emergency {
        int code_emergency PK
        datetime date_time
        float latitude
        float longitude
        uuid created_by FK
        int emergency_main FK
    }

    Department {
        string code_department PK
        string type_department
        string name_department
        json jurisdiction
        float city_center_lat
        float city_center_lon
        bigint phone
    }

    CommunicateEmergencyDepartment {
        string code_department FK
        int code_emergency FK
        boolean is_close
    }




